Guía Gratuita - 3 Pilares Clave para Tu Progreso.html

--- a/Guía Gratuita - 3 Pilares Clave para Tu Progreso.html
+++ b/Guía Gratuita - 3 Pilares Clave para Tu Progreso.html
@@ -360,7 +360,7 @@
                         <h2 class="font-roboto mb-3" style="font-size: 2em; color: var(--askesis-blue); border: none; justify-content: center;">¿Listo/a para la Hoja de Ruta Completa?</h2>
                         <p class="text-lg mb-4">Esta guía gratuita te da las bases. Si estás listo/a para ver resultados reales y sostenibles con un plan diseñado científicamente para ti, explora nuestros servicios.</p>
                         <p class="font-semibold text-xl mb-6 text-askesis-green">Invierte en un método, invierte en ti.</p>
-                        <a href="URL_PAGINA_DE_SERVICIOS" target="_blank" class="cta-button">
+                        <a href="https://omniainbonum.github.io/web-test/test%20web.html" target="_blank" class="cta-button">
                             <i class="fas fa-graduation-cap mr-2"></i>Ver Servicios de Entrenamiento
                         </a>
                     </div>
